<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activity.MainActivity">
        <Button
            android:id="@+id/btn_to_rxjava_activity"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="跳到rxjava界面"/>


        <TextView
            android:id="@+id/tv_loading_state"
            android:layout_below="@+id/btn_to_rxjava_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="加载中…………"
            android:textColor="@color/black"/>

        <LinearLayout
            android:id="@+id/rl_user_name"
            android:layout_below="@+id/tv_loading_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="用户名："
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="请输入用户名"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_user_name"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="密\u3000码："
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="请输入密码"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="登录"/>

        <TextView
            android:id="@+id/tv_login_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="15dp"
            android:background="#8f00"
            android:text="未登录"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_retrofit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_login_result"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="Retrofit"/>
        <Button
            android:id="@+id/btn_rxjava"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_retrofit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="RXJAVA"/>


        <Button
            android:id="@+id/btn_ormlite"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_rxjava"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="ormliteText"/>
        <Button
            android:id="@+id/btn_rxjava_packaged"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_ormlite"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="rxjava的封装"/>
        <Button
            android:id="@+id/btn_to_widget_activity"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_rxjava_packaged"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="跳到第二个界面"/>


        <TextView
            android:id="@+id/tv_http_result_show"
            android:textColor="@color/black"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_to_widget_activity"
            android:layout_marginTop="20dp"
            android:text="网络请求的结果："/>

    </RelativeLayout>
</ScrollView>